crates/red_knot_python_semantic/resources/mdtest/snapshots/overloads.md_-_Overloads_-_Invalid_-_At_least_two_overloads.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: overloads.md - Overloads - Invalid - At least two overloads
mdtest path: crates/red_knot_python_semantic/resources/mdtest/overloads.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import overload
 2 | 
 3 | @overload
 4 | def func1(x: int) -> int: ...
 5 | # error: [invalid-overload]
 6 | def func1(x: int | str) -> int | str:
 7 |     return x
 8 | 
 9 | @overload
10 | # error: [invalid-overload]
11 | def func2(x: int) -> int: ...
```

# Diagnostics

```
error: lint:invalid-overload: Function `func1` requires at least two overloads
 --> /src/mdtest_snippet.py:4:5
  |
3 | @overload
4 | def func1(x: int) -> int: ...
  |     ----- Only one overload defined here
5 | # error: [invalid-overload]
6 | def func1(x: int | str) -> int | str:
  |     ^^^^^
7 |     return x
  |

```

```
error: lint:invalid-overload: Function `func2` requires at least two overloads
  --> /src/mdtest_snippet.py:11:5
   |
 9 | @overload
10 | # error: [invalid-overload]
11 | def func2(x: int) -> int: ...
   |     -----
   |     |
   |     Only one overload defined here
   |

```
